# llm-wiki-core

./: .gitignore  CONTEXT.md  README.md  pyproject.toml
.superpowers/sdd/: r3-2-final-review-fix-report.md  r3-2-task-3-report.md  r4-3-task-1-report.md  r4-3-task-3-report.md  task-1-report.md  task-2-report.md  task-3-report.md  task-4-final-review-fix-report.md  task-4-report.md
codex_doc/: project_understanding_progress.md  r3-2-task-1-progress.md  r4-final-review-fix-progress.md  task-1-progress.md  task-2-progress.md  task-3-progress.md
docs/: adapter-packaging-plan.md  adapter-parity-baseline.md  agent-behavioral-contract.md  archive-manifest.md  artifact-equivalence-verification.md  capability-mapping.md  claude-adapter-plan.md  codex-adapter-install-rehearsal.md  codex-command-contract.md  completion-criteria.md  generic-mode-structure.md  implementation-readiness-checklist.md  knowledge-organization.md  local-install-rehearsal.md  manifest-schema.md  milestone-plan.md  mvp-review.md  mvp-scope.md  obsidian-cli-transport-boundary-rehearsal.md  operation-contract.md  parity-testing.md  project-skeleton-plan.md  r1-hardening-report.md  r2-obsidian-cli-transport-report.md  reference-implementation-alignment.md  release-notes-v0.1.0-mvp.md  release-notes-v0.4.0-mvp.md  release-notes-v0.4.3-mvp.md  release-notes-v0.5.0-mvp.md  release-readiness-checklist.md  roadmap-schedule.md  roadmap.md  test-fixture-plan.md  transport-contract.md  user-guide.md
docs/adr/: 0001-artifact-level-equivalence.md  (+7 more)
llm_wiki_core/: __init__.py  __main__.py  cli.py
(+154 files in other folders)
