[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-wiki-core"
version = "0.1.0"
description = "Neutral LLM Wiki core inspired by Karpathy's llm-wiki pattern."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "llm-wiki-core contributors" }
]
dependencies = []

[project.scripts]
llm-wiki = "llm_wiki_core.cli:main"

[tool.setuptools.packages.find]
include = ["llm_wiki_core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"
